--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-# Change stm32h563zi to your chip name, if necessary.
-embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32h573ii", "memory-x", "time-driver-any", "exti", "unstable-pac"] }
+# Change stm32h573zi to your chip name, if necessary.
+embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32h573ii", "time-driver-any", "exti", "unstable-pac"] }
 embassy-sync = { version = "0.6.1", features = ["defmt"] }
 embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
 embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
@@ -18,7 +18,7 @@ defmt = "0.3"
 defmt-rtt = "0.4"
 
 cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
-cortex-m-rt = "0.7.0"
+cortex-m-rt = { version = "0.7.0", default-features = false}
 embedded-hal = "0.2.7"
 embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
 embedded-hal-async = { version = "1.0" }
